# FlexRV32_ASIC

./: .gitignore  Makefile  cgr.sh  sim_params.json
blocks/: block_head.spice  rv_core.spice
blocks/openlane/: rv_alu1.spice  rv_alu2.spice  rv_ctrl.spice  rv_decode.spice  rv_decode_syn.v  rv_fetch.spice  rv_hazard.spice  rv_regs.spice  rv_write.spice
blocks/pc_inc/: pc_inc.sch  pc_inc.sym  pc_inc_sim.spice  stimuli.pc_inc
cells_sim/: cell_a211o.v  cell_a211oi.v  cell_a21bo.v  cell_a21o.v  cell_a21oi.v  cell_a221o.v  cell_a22o.v  cell_a22oi.v  cell_a2bb2o.v  cell_a311o.v  cell_a31o.v  cell_a31oi.v  cell_a32o.v  cell_a41o.v  cell_and2.v  cell_and2b.v  cell_and3.v  cell_and3b.v  cell_and4.v  cell_and4b.v  cell_and4bb.v  cell_buf.v  cell_dfxbp.v  cell_dfxtp.v  cell_inv.v  cell_mux2.v  cell_nand2.v  cell_nand3.v  cell_nand3b.v  cell_nand4.v  cell_nand4b.v  cell_nor2.v  cell_nor3.v  cell_nor3b.v  cell_nor4.v  cell_nor4b.v  cell_o2111a.v  cell_o211a.v  cell_o211ai.v  cell_o21a.v  (+18 more)
config/: nic_main.json
elements/: add_vars.sch  and3.sch  and3.sym  buf8.sch  buf8.sym  edff.sch  edff.sym  edffe.ext  edffe.mag  edffe.sch  edffe.spice  edffe.sym  full_adder.sch  full_adder.sym  inc_lib.spice  ks_black.sch  ks_black.sym  ks_grey.sch  ks_grey.sym  mux4.sch  mux4.sym  nand4.sch  nand4.sym  nand_p3.sch  nand_p3.sym  nor5.sch  nor5.sym  not.sch  not.sym  or4.sch  or4.sym  or5.sch  stimuli.edffe  untitled.sch  xor.sch
scripts/: raw2json.py
utils/: fstwriter.hpp  gen_model.py  meson.build  mkrom.cpp  nic_gen.cpp  nic_gen.py  raw.hpp  raw2fst.cpp  variable.hpp
(+111 files in other folders)
